import com.github.spotbugs.SpotBugsTask

plugins {
  id "application"
  id "checkstyle"
  id "com.github.ben-manes.versions" version "0.21.0"
  id "com.github.johnrengelman.shadow" version "4.0.4"
  id "com.github.sherter.google-java-format" version "0.8"
  id "com.github.spotbugs" version "1.7.1"
  id "io.franzbecker.gradle-lombok" version "2.1"
  id "java"
  id "org.beryx.runtime" version "1.1.6"
  id "org.javamodularity.moduleplugin" version "1.4.0"
  id "pmd"
}

repositories {
  mavenLocal()
  jcenter()
}

ext {
  vertxVersion = "3.7.0"
  jacksonVersion = "2.9.8"
  junitJupiterEngineVersion = "5.2.0"
  moduleName = "obis.smalldata"
}

sourceCompatibility = 11

group = "org.obis"
version = "1.0.0-SNAPSHOT"

mainClassName = "io.vertx.core.Launcher"

def mainVerticleName = "org.obis.smalldata.Starter"
def watchForChange = "src/**/*"
def doOnChange = "./gradlew classes"

runtime {
  options = ["--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"]
  modules = ['java.logging', 'java.sql', 'jdk.crypto.ec', 'java.desktop']
}

dependencies {
  implementation "io.vertx:vertx-auth-jwt:$vertxVersion"
  implementation "io.vertx:vertx-config:$vertxVersion"
  implementation "io.vertx:vertx-core:$vertxVersion"
  implementation "io.vertx:vertx-mongo-client:$vertxVersion"
  implementation "io.vertx:vertx-web-api-contract:$vertxVersion"
  implementation "io.vertx:vertx-web-client:$vertxVersion"
  implementation "io.vertx:vertx-web:$vertxVersion"

  implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jacksonVersion"
  implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:$jacksonVersion"
  implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"

  implementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0"
  implementation "org.tinylog:tinylog:1.3.5"
  implementation "org.tinylog:slf4j-binding:1.3.5"

  implementation "com.mashape.unirest:unirest-java:1.4.9"
  implementation "com.google.guava:guava:27.1-jre"

  compileOnly "org.projectlombok:lombok:1.18.8"

  testImplementation "com.fasterxml.uuid:java-uuid-generator:3.1.5"
  testImplementation "io.vertx:vertx-junit5:$vertxVersion"
  testImplementation "org.assertj:assertj-core:3.12.2"
  testImplementation "org.xmlunit:xmlunit-core:2.6.2"

  testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitJupiterEngineVersion"
  testCompile "org.junit.jupiter:junit-jupiter-params:5.4.2"
  testCompile "org.assertj:assertj-core:3.11.1"
}

test {
  useJUnitPlatform()
  testLogging {
    events "PASSED", "FAILED", "SKIPPED"
  }
}

run {
  args = ["run", mainVerticleName,
          "-conf", "./config/config.json",
          "--redeploy=$watchForChange",
          "--launcher-class=$mainClassName",
          "--on-redeploy=$doOnChange"]
}

task(runClientTest, dependsOn: 'classes', type: JavaExec) {
  main = 'org.obis.loginclient.MockServerLoginPage'
  classpath = files(sourceSets.test.runtimeClasspath
    .collect { it.toString().replaceAll("build/resources/main", "src/main/resources") }
    .collect { it.toString().replaceAll("build/resources/test", "src/test/resources") })
}

shadowJar {
  manifest {
    attributes "Main-Verticle": mainVerticleName
  }
  mergeServiceFiles {
    include "META-INF/services/io.vertx.core.spi.VerticleFactory"
  }
}

checkstyle {
  ignoreFailures false
  maxErrors 0
  maxWarnings 0
  toolVersion "8.23"
}

pmd {
  consoleOutput true
  ruleSetConfig = resources.text.fromFile("config/pmd/ruleset.xml")
  ruleSets = []
}

spotbugs {
  toolVersion = "3.1.12"
  effort = "max"
  excludeFilter = file("config/spotbugs/spotbugs-exclude.xml")
}

tasks.withType(SpotBugsTask) {
  reports {
    xml.enabled = false
    html.enabled = true
  }
}
